2001-12-30  Ralf Habacker  <Ralf.Habacker@freenet.de>

	* cygmagic: Eliminate unneeded use of 'tr' and 'bc'.

2001-12-30  Corinna Vinschen  <corinna@vinschen.de>

	* security.cc (open_local_policy): Use POLICY_EXECUTE instead of
	enumerating user rights.

2001-12-29  Corinna Vinschen  <corinna@vinschen.de>

	* security.cc (open_local_policy): Initialize lsa handle to NULL.
	Request only needed access rights in call to LsaOpenPolicy().
	(create_token): Check for NULL lsa pointer.

2001-12-28  Corinna Vinschen  <corinna@vinschen.de>

	* cygwin.din: Add symbols for endutent(), getutent(), getutid(),
	getutline(), setutent() and utmpname().
	* syscalls.cc (setutent): New function.
	(endutent): Ditto.
	(utmpname): Ditto.
	(getutent): Ditto.
	(getutid): Ditto.
	(getutline): Ditto.
	* include/cygwin/version.h: Bump API minor version.

2001-12-26  Christopher Faylor  <cgf@redhat.com>

	* cygmagic: Add define name to warning.
	* dcrt0.cc (_dll_crt0): Check for changes in child_info size.
	(multiple_cygwin_problem): Avoid "proc" errors when testing.  Just
	assume new cygwin proc.
	* shared_info.h (mount_info): Add 'cb' element for sanity checks.
	(shared_info): Ditto.
	* child_info.h (child_info): Add fhandler_union_size element for sanity
	checking.
	* shared.cc (open_shared): Detect shared region size mismatch between
	parent and child.
	(shared_info::initialize): Detect shared region size mismatch with
	expectation.
	(memory_Init): Ditto.
	* sigproc.cc (init_child_info): Correctly set cb in passed structure.
	* shared.cc (open_shared):

2001-12-26  Christopher Faylor  <cgf@redhat.com>

	* include/getopt.h: Protect a declaratin.

2001-12-26  Robert Collins  <rbtcollins@hotmail.com>

	* thread.cc (pthread_cond::Signal): Use a separate flag for signal
	detection and broadcast semantics.
	(__pthread_cond_dowait): Ditto.
	* thread.h (pthread_cond): New flag for testing when a waiter has
	woken.

2001-12-26  Christopher Faylor  <cgf@redhat.com>
